# aoc24

./: aoc24.cabal  hie.yaml
haskell/: Day1.hs  Day2.hs  Day3.hs
