cabal-version:      3.0
name:               aoc22
version:            0.1.0.0
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common base
    build-depends:      rerebase
    default-language:   GHC2024
    default-extensions: TypeFamilies
    ghc-options:        -Wall -Wno-name-shadowing -O2
    hs-source-dirs:     haskell

executable day1
    import:           base
    main-is:          Day1.hs
    build-depends:    parsec

executable day2
    import:           base
    main-is:          Day2.hs
    build-depends:    parsec

executable day3
    import:           base
    main-is:          Day3.hs
    build-depends:    parsec

-- executable day4
--     import:           base
--     main-is:          Day4.hs
--     build-depends:    parsec
-- 
-- executable day5
--     import:           base
--     main-is:          Day5.hs
--     build-depends:    parsec
-- 
-- executable day6
--     import:           base
--     main-is:          Day6.hs
-- 
-- executable day7
--     import:           base
--     main-is:          Day7.hs
--     build-depends:    recursion-schemes, parsec
-- 
-- executable day8
--     import:           base
--     main-is:          Day8.hs
--     build-depends:    parsec
-- 
-- executable day9
--     import:           base
--     main-is:          Day9.hs
--     build-depends:    parsec
-- 
-- executable day10
--     import:           base
--     main-is:          Day10.hs
--     build-depends:    parsec
-- 
-- executable day11
--     import:           base
--     main-is:          Day11.hs
--     build-depends:    parsec
--                     , primitive
-- 
-- executable day12
--     import:           base
--     main-is:          Day12.hs
--     build-depends:    microlens-platform
--                     , monad-extras
--                     , parsec
--                     , pqueue
-- 
-- executable day13
--     import:           base
--     main-is:          Day13.hs
--     build-depends:    parsec
-- 
-- executable day14
--     import:           base
--     main-is:          Day14.hs
